# flut1

./: README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: flutter.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/ffigen_app_test17754_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: ffigen_app_test17754.podspec
ios/Classes/: ffigen_app_test17754.c
lib/: ffigen_app_test17754.dart  ffigen_app_test17754_bindings_generated.dart
macos/: ffigen_app_test17754.podspec
src/: CMakeLists.txt  ffigen_app_test17754.c
